add a history of bundles to the talks list

--- a/_data/talks.yaml
+++ b/_data/talks.yaml
@@ -1,4 +1,13 @@
 ---
+- title: "A History of Bundles: 2010 to 2017"
+  description: "When Bundler 1.0 came out in 2010, it did something really great: installed all of your gems and let you use them in your app. Today, Bundler does something really great: it installs all your gems and lets you use them. So, given that, why has Bundler needed thousands upon thousands of hours of development work? What exactly has changed since then? Prepare to find out. We’ll cover performance improvements, server response optimizations, adapting to new versions of Ruby, and adding features to support new usecases. Learn the tricks of Bundler power users, and find out how to optimize your gem workflows."
+  post_url: "/2017/11/16/a-history-of-bundles/"
+  events:
+    - name: RubyConf 2017
+      date: 2017-11-16
+      url: https://rubyconf.org
+      video_url: https://www.youtube.com/watch?v=BXFYjO8qDxk
+      slides_url: https://speakerdeck.com/indirect/a-history-of-bundles-2010-to-2017
 - title: Robin Hood Hashing
   description: Using and contributing to open source has been a cornerstone of the
     Ruby community for many years. Despite this strong tradition, it’s hard to find
