[talks] add video to pairing

--- a/_data/talks.yaml
+++ b/_data/talks.yaml
@@ -7,6 +7,7 @@
       date: 2018-04-16
       url: https://railsconf.org
       slides_url: https://speakerdeck.com/indirect/pairing-a-guide-to-fruitful-collaboration
+      video_url: https://www.youtube.com/watch?v=km7uGUEd4fk
 - title: "A History of Bundles: 2010 to 2017"
   description: "When Bundler 1.0 came out in 2010, it did something really great: installed all of your gems and let you use them in your app. Today, Bundler does something really great: it installs all your gems and lets you use them. So, given that, why has Bundler needed thousands upon thousands of hours of development work? What exactly has changed since then? Prepare to find out. We’ll cover performance improvements, server response optimizations, adapting to new versions of Ruby, and adding features to support new usecases. Learn the tricks of Bundler power users, and find out how to optimize your gem workflows."
   post_url: "/2017/11/16/a-history-of-bundles/"
