[post-up] add !!Con talk video links

--- a/_data/talks.yaml
+++ b/_data/talks.yaml
@@ -7,6 +7,7 @@
       date: 2019-02-23
       url: https://bangbangcon.com/west
       slides_url: https://speakerdeck.com/indirect/how-to-calculate-the-phase-of-the-moon-very-very-badly
+      video_url: https://www.youtube.com/watch?v=syx4pWxu_sk
 - title: "Pairing: a guide to fruitful collaboration 🍓🍑🍐"
   description: "Despite general consensus that pairing is good, the desire to pair doesn’t come with instructions. Come to this talk to learn how to pair with someone more experienced, how (and why) to pair with your peers, and how to pair productively with someone less experienced. (Hint: productivity isn’t about the speed of new features.) Pairing is a fantastic tool for your professional toolbox: let’s design, discuss, refine, and refactor, together."
   post_url: "/2018/04/26/pairing-a-guide-to-fruitful-collaboration-/"
