combine the facepalm sites into one project entry

--- a/_data/projects.yaml
+++ b/_data/projects.yaml
@@ -10,19 +10,7 @@
   description: "An iPhone calendar specifically for the phase of the moon, including moonscopes written by <a href='https://helentseng.com'>@wolfchirp</a>. (A collaboration with <a href='http://sailorhg.com'>@sailorhg</a>.)"
 - title: "actually.men"
   url: "http://actually.men"
-  description: "A single page collecting all of the cultural misconception single-serving sites under one good domain name."
-- title: "arewomenbadatcoding.com"
-  url: "http://arewomenbadatcoding.com"
-  description: "Even more ridiculous than talking, but if Google needs to fire someone for making biological claims to back up their misogyny, this too is somehow still controversial."
-- title: "dowomentalkmore.com"
-  url: "http://dowomentalkmore.com"
-  description: "Incredulous this acutally needed proving, I nonetheless had to debunk the claim enough times it became a site."
-- title: "isitapipelineproblem.com"
-  url: "http://isitapipelineproblem.com"
-  description: "The first thing you're likely to hear after pointing out that tech isn't a meritocracy: it's a pipeline problem."
-- title: "istechameritocracy.com"
-  url: "http://istechameritocracy.com"
-  description: "A single-serving site you can link to when someone seems to think tech is a meritocracy. (Also available at <a href='http://butitsameritocracy.com'>butitsameritocracy.com</a>.)"
+  description: "A site to clarify some misconceptions. Is tech a meritocracy? Is it a pipeline problem? Do women talk more? Are women bad at coding? Come on, now."
 - title: "The Ruby Way, 3rd Edition"
   url: "http://therubyway.io"
   description: "A book about the Ruby programming language, published by Addison-Wesley."
