update projects, add bundler

--- a/_data/projects.yaml
+++ b/_data/projects.yaml
@@ -7,10 +7,13 @@
   description: "A non-profit trade association that pays developers to maintain Ruby open source tools, raising funds from developers and companies that use Ruby."
 - title: "Luna, a calendar for witches and werewolves"
   url: "http://witchy.co"
-  description: "An iPhone calendar specifically for the phase of the moon, including moonscopes written by <a href='https://helentseng.com'>@wolfchirp</a>. (A collaboration with <a href='http://sailorhg.com'>@sailorhg</a>.)"
+  description: "A collaboration with <a href='http://sailorhg.com'>@sailorhg</a> to create an iPhone calendar specifically for the phase of the moon. Includes moonscopes written by <a href='https://helentseng.com'>Helen Shewolfe Tseng</a> and music by <a href='https://slimegirls.bandcamp.com'>Slime Girls</a>."
 - title: "actually.men"
   url: "http://actually.men"
-  description: "A site to clarify some misconceptions. Is tech a meritocracy? Is it a pipeline problem? Do women talk more? Are women bad at coding? Come on, now."
+  description: "A site to clarify some misconceptions. Is tech a meritocracy? Is it a pipeline problem? Do women talk more? Are women bad at coding? How are we still asking these questions?"
 - title: "The Ruby Way, 3rd Edition"
   url: "http://therubyway.io"
   description: "A book about the Ruby programming language, published by Addison-Wesley."
+- title: "Bundler"
+  url: "http://bundler.io"
+  description: "The Ruby programming language dependency manager."
