--- a/_data/projects.yaml
+++ b/_data/projects.yaml
@@ -1,7 +1,7 @@
 ---
 - title: "The Cube Rule of Food Identification"
   url: "http://cuberule.com"
-  description: "The ultimate way to classify food. Written up in The Washington Post, and nominated for a 2019 Webby award."
+  description: "The ultimate way to classify food. Written about <a href='https://www.washingtonpost.com/news/voraciously/wp/2018/12/12/a-hot-dog-is-a-taco-a-steak-is-a-salad-a-pop-tart-is-a-calzone-let-the-cube-rule-explain/'>in the Washington Post</a>, reached top 5 in the <a href='https://www.webbyawards.com/winners/2019/websites/general-websites/food-drink/'>2019 Webby awards</a>, and cited by the Honorable Douglas R. M. Nazarian in <a href='https://mdcourts.gov/data/opinions/cosa/2019/2411s17.pdf'>a judicial ruling for the Maryland Court of Special Appeals</a>."
 - title: "Ruby Together"
   url: "https://rubytogether.org"
   description: "A non-profit trade association that pays developers to maintain Ruby open source tools, raising funds from developers and companies that use Ruby."
