use kramdown to work with Jekyll 4

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 .DS_Store
-/.bundle
-/.jekyll-metadata
-/public
-/tmp
-/vendor/bundle
+/.bundle/
+/.jekyll-cache/
+/.jekyll-metadata/
+/public/
+/tmp/
+/vendor/bundle/
