--- a/_data/projects.yaml
+++ b/_data/projects.yaml
@@ -4,7 +4,7 @@
   description: "The ultimate way to classify food. Written about <a href='https://www.washingtonpost.com/news/voraciously/wp/2018/12/12/a-hot-dog-is-a-taco-a-steak-is-a-salad-a-pop-tart-is-a-calzone-let-the-cube-rule-explain/'>in the Washington Post</a>, reached top 5 in the <a href='https://www.webbyawards.com/winners/2019/websites/general-websites/food-drink/'>2019 Webby awards</a>, and cited by the Honorable Douglas R. M. Nazarian in <a href='https://mdcourts.gov/data/opinions/cosa/2019/2411s17.pdf'>a judicial ruling for the Maryland Court of Special Appeals</a>."
 - title: "Ruby Together"
   url: "https://rubytogether.org"
-  description: "A non-profit trade association that pays developers to maintain Ruby open source tools, raising funds from developers and companies that use Ruby."
+  description: "A non-profit trade association that pioneered paying developers to maintain Ruby open source tools by raising funds from developers and companies that use Ruby. Merged with <a href='https://rubycentral.org'>Ruby Central</a> in 2021."
 - title: "Luna, a calendar for witches and werewolves"
   url: "http://witchy.co"
   description: "A collaboration with <a href='http://sailorhg.com'>@sailorhg</a> to create an iPhone calendar specifically for the phase of the moon. Includes moonscopes written by <a href='https://helentseng.com'>Helen Shewolfe Tseng</a> and music by <a href='https://slimegirls.bandcamp.com'>Slime Girls</a>."
