--- a/_data/talks.yaml
+++ b/_data/talks.yaml
@@ -1,4 +1,11 @@
 ---
+- title: "Securing your Software Supply Chain Panel"
+  description: "Composability has rapidly accelerated the pace of software development by allowing engineers to reuse openly shared libraries and packages. But the widespread adoption of these components also makes them an enticing avenue of attack for malicious actors. In this fireside session, André Arko (Head of Open Source, Ruby Central) and Dustin Ingram (Director, Python Software Foundation) will join Emilio Escobar (CISO, Datadog) for a discussion about securing your software supply chain. They’ll share practices to verify the provenance of your dependencies, mitigate the risks of using third party components, and secure the software you share with others."
+  events:
+    - name: "DASH by Datadog"
+      date: 2023-08-16
+      url: https://www.dashcon.io
+      video_url: https://www.youtube.com/watch?app=desktop&v=OqY0vE2ZjfYa
 - title: "Engineering Teams in a Time of Corona"
   description: "It’s been a month since San Francisco and the surrounding counties announced a lockdown, and at least a couple of weeks in most of the US. The good news is that it’s possible to build software even when everyone is staying at home every day, unlike a lot of jobs!<br><br>The bad news is this isn’t remote working, not the way that anyone has ever talked about it before. In the words of Juan Pablo Buritica, this is “stuck at home work”, and that’s much worse."
   post_url: "/2020/04/16/sustainable-work-from-home-while-the-world-is-burning/"
