--- a/data/resume.yaml
+++ b/data/resume.yaml
@@ -1,119 +1,279 @@
 ---
 - company: SunChaser
-  title: Cofounder
-  link: https://sunchaser.io
+  title: Cofounder & CTO
+  url: https://sunchaser.io
   location: San Francisco, CA
-  start: March 2024
-  description:
+  start: August 2023
+  description: Designing and building tools for on-call engineers, starting with the missing Slack integration for PagerDuty.
 
-- company: Ruby Central
-  title: Open Source Lead
+- company: Cloud City
+  title: Director of Engineering
+  url: https://cloudcity.io
   location: San Francisco, CA
-  start: January 2022
-  end: September 2024
-  description:
+  start: May 2021
+  description: Architecture and principal-level software consulting at many Bay Area startups, solving organizational problems with software and communication; business strategy and engineering management as a director at the consultancy.
+  clients: 
+    - company: Ruby Central
+      client: true
+      url: https://rubycentral.org
+      title: Head of Open Source
+      location: Remote
+      start: January 2022
+      end: August 2024
+    - company: Excelligence
+      client: true
+      url: https://excelligence.com
+      title: Software Management Consultant
+      location: Remote
+      start: August 2023
+      end: August 2024
+    - company: PivotBio
+      client: true
+      url: https://pivotbio.com
+      title: Principal Software Consultant
+      location: Remote
+      start: February 2023
+      end: August 2023
+    - company: Vital Strategies
+      client: true
+      url: https://vitalstrategies.org
+      title: Principal Software Consultant
+      location: Remote
+      start: August 2022
+      end: December 2022
+    - company: One Medical
+      client: true
+      url: https://www.onemedical.com
+      title: Principal Software Consultant
+      location: Remote
+      start: May 2021
+      end: July 2022
 
 - company: Ruby Together
-  title: Founder, Executive Director
+  title: Founder & Executive Director
   location: San Francisco, CA
   start: February 2015
   end: December 2021
-  description: |
-    Solo-founded and bootstrapped a 501(c)(6) non-profit supporting the Ruby programming language package management system. Raised hundreds of thousands of dollars annually while managing all staff and open source developers.
+  description: Solo-founded and bootstrapped a 501(c)(6) non-profit supporting the Ruby language package management system. Raised hundreds of thousands of dollars annually while managing all staff and open source developers. Merged into [Ruby Central](https://rubycentral.org) in December 2021.
 
-- company: Cloud City Development
-  title: Vice Minister of Computation
-  url: cloudcity.io
-  link: https://cloudcity.io
+- company: Cloud City
+  title: Principal Software Engineer & Manager
+  url: https://cloudcity.io
+  location: San Francisco, CA
+  start: July 2019
+  end: April 2021
+  description: For clients, delivered deep expertise in web development, process troubleshooting, and coordination of complex initiatives across teams and divisions. For the consultancy, worked on business development, hiring, and day to day management of the software engineering team.
+  clients:
+  - company: Resolve to Save Lives
+    url: https://resolvetosavelives.org
+    title: Principal Software Consultant
+    location: Remote
+    start: February 2021
+    end: April 2021
+  - company: One Medical
+    url: https://www.onemedical.com
+    title: Principal Software Consultant
+    location: Remote
+    start: October 2020
+    end: January 2021
+  - company: DNC
+    url: https://democrats.org
+    title: Principal Software Consultant
+    location: Remote
+    start: July 2020
+    end: October 2020
+  - company: PivotBio
+    url: https://pivotbio.com
+    title: Principal Software Consultant
+    location: Remote
+    start: June 2020
+    end: November 2020
+  - company: Resolve to Save Lives
+    url: https://resolvetosavelives.org
+    title: Principal Software Consultant
+    location: Remote
+    start: April 2020
+    end: June 2020
+  - company: One Medical
+    url: https://www.onemedical.com
+    title: Principal Software Consultant
+    location: San Francisco, CA
+    start: July 2019
+    end: March 2020
+
+- company: Cloud City
+  title: Staff Software Engineer
+  url: https://cloudcity.io
+  location: San Francisco, CA
+  start: February 2016
+  end: July 2019
+  description: Co-founded a DevOps/DevEx team, led a team building the first software approved by the FDA for doctors to prescribe to patients, designed and implemented bespoke deployment system using Helm and Kubernetes.
+  clients: 
+  - company: 5Gyres
+    url: https://www.5gyres.org
+    title: Staff Software Consultant
+    location: Remote
+    start: June 2019
+    end: July 2019
+  - company: McKinsey
+    url: https://www.mckinsey.com
+    title: Staff Software Consultant
+    location: Remote
+    start: May 2018
+    end: June 2019
+  - company: ClickFunnels
+    url: https://www.clickfunnels.com
+    title: Staff Software Consultant
+    location: Remote
+    start: April 2018
+    end: May 2018
+  - company: Pear Theraputics
+    title: Staff Software Consultant
+    location: San Francisco, CA
+    start: October 2017
+    end: March 2018
+  - company: Fastly
+    url: https://www.fastly.com
+    title: Staff Software Consultant
+    location: San Francisco, CA
+    start: July 2017
+    end: September 2017
+  - company: TCI
+    url: https://www.teachtci.com
+    title: Staff Software Consultant
+    location: Burlingame, CA
+    start: May 2017
+    end: July 2017
+  - company: Gusto
+    url: https://www.gusto.com
+    title: Staff Software Consultant
+    location: San Francisco, CA
+    start: February 2016
+    end: April 2017
+
+- company: Cloud City
+  title: Senior Software Engineer
+  url: https://cloudcity.io
   location: San Francisco, CA
   start: February 2013
-  description: |
-    Architecture and principal-level software consulting at many Bay Area startups; business and engineering management as a director at the consultancy.
+  end: February 2016
+  description: Provided staff augmentation, advice, and mentorship via pair programming, primarily using Rails and Javascript. Architected backend API system for world-famous musician's iOS app.
+  clients:
+  - company: TCI
+    url: https://www.teachtci.com
+    title: Senior Software Consultant
+    location: Burlingame, CA
+    start: October 2015
+    end: February 2016
+  - company: PLoS
+    url: https://plos.org
+    title: Senior Software Consultant
+    location: San Francisco, CA
+    start: October 2014
+    end: September 2015
+  - company: Wanelo
+    title: Senior Software Consultant
+    location: San Francisco, CA
+    start: January 2014
+    end: October 2014
+  - company: [Redacted]
+    title: Senior Software Consultant
+    location: Remote
+    start: August 2013
+    end: November 2013
+  - company: Winafy
+    title: Senior Software Consultant
+    location: Remote
+    start: June 2013
+    end: January 2014
+  - company: Wanelo
+    title: Senior Software Consultant
+    location: San Francisco, CA
+    start: March 2013
+    end: June 2013
 
 - company: Mavenlink
   title: Open Source Lead
-  link: https://mavenlink.com
+  url: https://mavenlink.com
   location: San Francisco, CA
   start: October 2012
   end: February 2013
-  description: |
-    Extracted internal libraries for release as open source, maintained multiple external open source projects, and developed conference talk proposals. Provided internal consulting on Ruby and Rails issues, upgraded infrastructure, and paired with junior and mid-level developers for assistance and training.
+  description: Extracted internal libraries for release as open source, maintained multiple external open source projects, and developed conference talk proposals. Provided internal consulting on Ruby and Rails issues, upgraded infrastructure, and paired with junior and mid-level developers for assistance and training.
 
 - company: FileThis
   title: Software Consultant
   location: San Francisco, CA
   start: June 2012
   end: February 2013
-  description: |
-    Maintained, updated, and added new scripts to the FileThis fork of the Wesabe SSU project, used to automate the process of fetching monthly statements from a large variety of financial institutions and utility providers.
+  description: Maintained, updated, and added new scripts to the FileThis fork of the Wesabe SSU project, used to automate the process of fetching monthly statements from a large variety of financial institutions and utility providers.
 
 - company: Etsy
   title: Software Consultant
-  link: https://etsy.com
-  location: New York, NY
+  url: https://etsy.com
+  location: Remote
   start: June 2012
   end: December 2012
-  description: |
-    Updated legacy Rails application from Ruby 1.8 and Rails 2.2 to Ruby 1.9 and Rails 3.2. Provided emergency troubleshooting, security recommendations, and implemented fixes for many known and discovered security and functional issues.
+  description: Updated legacy Rails application from Ruby 1.8 and Rails 2.2 to Ruby 1.9 and Rails 3.2. Provided emergency troubleshooting, security recommendations, and implemented fixes for many known and discovered security and functional issues.
 
-- company: Fanfare Entertainment
+- company: Fanfare
+  url: http://www.fanfareentertainment.com
   title: Software Consultant
   location: Burlingame, CA
   start: June 2012
   end: October 2012
-  description: |
-    Took over development of a Rails application that provides musicians with an online storefront for sales of music, music videos, and instructional videos. Assisted with development of a Rails-based app providing a JSON API backend for iOS clients.
+  description: Took over development of a Rails application that provides musicians with an online storefront for sales of music, music videos, and instructional videos. Assisted with development of a Rails-based app providing a JSON API backend for iOS clients.
 
 - company: Tilde
-  link: https://tilde.io
+  url: https://tilde.io
   title: Software Engineer
   location: San Francisco, CA
   start: April 2012
   end: May 2012
-  description: |
-    Worked as a consultant with [Square](https://squareup.com) to build their next generation user dashboard using the Javascript framework Ember.js. Built the Tilde website, and contributed to the Ember and ember-rails open source projects.
+  description: Built the Tilde website, contributed to the Ember and ember-rails open source projects, and worked as a consultant for client [Square](https://squareup.com) to build a next-generation user dashboard using the Javascript framework Ember.js.
+  clients:
+  - company: Square
+    url: https://squareup.com
+    title: Software Consultant
+    location: San Francisco, CA
+    start: April 2012
+    end: May 2012
 
 - company: Plex
-  link: https://plexapp.com
+  url: https://plexapp.com
   title: Software Engineer
-  location: San Francisco, CA
+  location: Remote
   start: July 2010
   end: April 2012
-  description: |
-    Maintained, updated, and added features, unit tests, and integration tests to a legacy Rails application. Architected, designed, implemented, and automated deployment of a web service using Rails and Nginx that manages, updates, and routes requests for hundreds of Python HTTP servers. Designed and implemented a web application at my.plexapp.com that functions as the centralized coordinator of the Plex ecosystem, including user profiles, media queues, clients, and servers.
+  description: Maintained, updated, and added features, unit tests, and integration tests to a legacy Rails application. Architected, designed, implemented, and automated deployment of a web service using Rails and Nginx that manages, updates, and routes requests for hundreds of Python HTTP servers. Designed and implemented a web application at my.plexapp.com that functions as the centralized coordinator of the Plex ecosystem, including user profiles, media queues, clients, and servers.
 
 - company: Engine Yard
-  link: https://engineyard.com
+  url: https://engineyard.com
   title: Software Engineer
   location: San Francisco, CA
   start: December 2009
   end: July 2010
-  description: |
-    Worked on Bundler, an open source component of Ruby on Rails 3, as a member of the 3-person core team. Designed and implemented the first version of the Engineyard gem, a command-line tool for deploying Rails applications to Engine Yard’s AppCloud.  Maintained and extended the AppCloud application, written in Merb.
+  description: Worked on Bundler, an open source component of Ruby on Rails 3, as a member of the 3-person core team. Designed and implemented the first version of the Engineyard gem, a command-line tool for deploying Rails applications to Engine Yard’s AppCloud.  Maintained and extended the AppCloud application, written in Merb.
 
 - company: Wesabe
   title: Software Engineer
-  location: San Francisco, CA
+  location: Remote
   start: October 2007
   end: December 2009
-  description: |
-    Maintained and extended the primary application, written in Ruby on Rails. Extensively developed new frontend portions of the application using jQuery. Installed in-house tools for the engineering team to use, including CCrb, gitosis, and RedMine. Helped develop open-source tools for company communication and git workflow, including Wesabot, git-tools, and git-commit-notifier.
+  description: Maintained and extended the primary application, written in Ruby on Rails. Extensively developed new frontend portions of the application using jQuery. Installed in-house tools for the engineering team to use, including CCrb, gitosis, and RedMine. Helped develop open-source tools for company communication and git workflow, including Wesabot, git-tools, and git-commit-notifier.
 
 - company: i5Labs
   title: Rails Lead
-  location: San Francisco, CA
+  location: Remote
   start: January 2007
   end: October 2007
-  description: |
-    Worked with clients to design, develop, and deploy Rails applications. Projects include solo development of an application for ordering food delivery online, as well as working with a team to develop a social networking site aimed at religious groups.
+  description: Worked with clients to design, develop, and deploy Rails applications. Projects include solo development of an application for ordering food delivery online, as well as working with a team to develop a social networking site aimed at religious groups.
 
 - company: ReziTech
   title: Rails Developer
   start: January 2006
   end: November 2006
   location: La Habra, CA
-  description: |
-    Developed and deployed multiple Ruby on Rails applications for ReziTech’s clients, including a web storefront for selling mailers and flyers to realtors and a payroll management application. Designed, developed, deployed, and maintained an internal Rails application for customer relationship management.
+  description: Developed and deployed multiple Ruby on Rails applications for ReziTech’s clients, including a web storefront for selling mailers and flyers to realtors and a payroll management application. Designed, developed, deployed, and maintained an internal Rails application for customer relationship management.
 
 - company: The University Centre
   title: Rails Developer
@@ -121,5 +281,4 @@
   start: May 2005
   end: August 2005
   location: Buena Park, CA
-  description: |
-    Designed, developed, and deployed a Rails application to provide online access to a conference hosted at Oxford and Cambridge Universities. The application provided a store to purchase access to the conference sessions, and enabled each viewer to have access to the transcript of each talk, the slides that accompanied it, and background material, all updated in real time while watching the video of the conference session.
+  description: Designed, developed, and deployed a Rails application to provide online access to a conference hosted at Oxford and Cambridge Universities. The application provided a store to purchase access to the conference sessions, and enabled each viewer to have access to the transcript of each talk, the slides that accompanied it, and background material, all updated in real time while watching the video of the conference session.
