remove categories and tags (the default taxonomies)

--- a/hugo.toml
+++ b/hugo.toml
@@ -2,6 +2,8 @@ baseURL = "https://andre.arko.net/"
 title = "André.Arko.net"
 languageCode = "en-us"
 
+[Taxonomies]
+
 [permalinks]
 post = "/:year/:month/:day/:slug/"
 
