--- a/hugo.toml
+++ b/hugo.toml
@@ -6,6 +6,7 @@ languageCode = "en-us"
 
 [permalinks]
 post = "/:year/:month/:day/:slug/"
+page = "/:slugorcontentbasename/"
 
 [markup.goldmark.renderer]
 unsafe = true
