--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,7 +18,7 @@ concurrency:
 
 jobs:
   build:
-    runs-on: ubuntu-24.04
+    runs-on: ubuntu-latest
     env:
       HUGO_ENVIRONMENT: ${{ vars.HUGO_ENVIRONMENT || 'production' }}
     steps:
