--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,7 +25,7 @@ jobs:
       - uses: actions/checkout@v4
       - name: Read Hugo version
         id: hugo-version
-        run: echo "HUGO_VERSION=$(cat .hvm)" >> "$GITHUB_OUTPUT"
+        run: echo "HUGO_VERSION=$(cut -b 2-99 .hvm)" >> "$GITHUB_OUTPUT"
       - name: Setup Hugo
         uses: peaceiris/actions-hugo@v3
         with:
