pull date from filename if otherwise missing

--- a/hugo.toml
+++ b/hugo.toml
@@ -37,3 +37,7 @@ min = "0.116.0"
 
 [security.http]
 mediaTypes = ['^text/xml;']
+
+[frontmatter]
+date = [':default', ':filename']
+lastmod = ['lastmod', ':fileModTime']
