--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,6 +17,20 @@ concurrency:
   cancel-in-progress: false
 
 jobs:
+  to_stage:
+    if: github.repository == 'indirect/andre.arko.net'
+    runs-on: ubuntu-24.04
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+      - uses: pixta-dev/repository-mirroring-action@v1
+        with:
+          target_repo_url:
+            git@github.com:indirect/drafts.arko.net.git
+          ssh_private_key:
+            ${{ secrets.DRAFTS_SSH_PRIVATE_KEY }}
+    
   build:
     runs-on: ubuntu-latest
     env:
