--- a/hugo.toml
+++ b/hugo.toml
@@ -6,7 +6,7 @@ languageCode = "en-us"
 
 [permalinks]
 post = "/:year/:month/:day/:slug/"
-note = "/:year/:month/:day/:slugorcontentbasename/"
+note = "/:year/:month/:day/:slug/"
 page = "/:slugorcontentbasename/"
 
 [markup.goldmark.renderer]
